se agrega navbar, sin íconos redes sociales

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    <header></header>
-    <section></section>
-    <footer></footer>
+  <header>
+    <nav>
+      <div class="nav-wrapper">
+        <div class="container">
+        <div class="row">
+            <a href="#" class="brand-logo center"><img class="nav-logo"
+              src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/logo%20blanco.png"
+              alt="main-logo"></a>
+          <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <li><a id="we" class="waves-effect waves-light btn-flat col l12">Quienes somos</a></li>
+            <li><a id="products" class="waves-effect waves-light btn-flat col l12">Productos</a></li>
+            <li><a id="recipies" class="waves-effect waves-light btn-flat col l12">Recetas</a></li>
+            <li><a id="distribute" class="waves-effect waves-light btn-flat col l12">Venta Mayorista</a></li>
+            <li><a id="contact-us" class="waves-effect waves-light btn-flat col l12">Contáctanos</a></li>
+
+            <!--Botones de íconos redes sociales-->
+            <!--<li><a href="#"><img src="" alt=""></a></li>
+            <li><a href="#"><img src="" alt=""></a></li>-->
+          </ul>
+        </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <section class="main-screen">
+    <!-- <img src="/home/laboratoriad310/Escritorio/LaboratoriaFran/proyectos/UX/scl-2018-02-ux-marketplace/src/img/web-imgs/_MG_4026.jpg" alt="Peanut-Butter"> -->
+  </section>
+  <footer></footer>
+  <!-- Compiled and minified CSS -->
+
+
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
+
 </html>
