se agrega img peanuts

--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,15 @@
       <div class="container">
         <div class="row">
           
+<img id="peanuts" src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/peanuts.png" alt="peanut">
+
             <h3 class="col l12">¿Por qué elegir Snack Natural?</h3>
             <br>
             <br>
            
             <div class="col l4">
             <img id="leaf"
-              src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/plant.png"
+              src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/plant%20(1).png"
               alt="leaf">
             <h6 class="col l12">100% Naturales</h6>
             <p class="col l12 paragraph">Todos nuestros productos son realizados con ingredientes orgánicos, sin azúcares, sin
@@ -100,7 +102,7 @@
               </p>
             </div>
             <div class="col l4">
-              <img id="heart" src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/heart.png" alt="heart">
+              <img id="heart" src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/Group.png" alt="heart">
             <h6 class="col l12">Trabajamos con Pasion</h6>
             <p class="col l12 paragraph">Producimos nuestros productos de principio a fin con dedicación para así conservar el sabor y valor nutricional de cada alimento.</p>
             </div>
