se agregan imagenes para cards, además se sube html y css  de seccion somos

--- a/src/index.html
+++ b/src/index.html
@@ -106,9 +106,85 @@
             <h6 class="col l12">Trabajamos con Pasion</h6>
             <p class="col l12 paragraph">Producimos nuestros productos de principio a fin con dedicación para así conservar el sabor y valor nutricional de cada alimento.</p>
             </div>
+            <img id="peanuts2" src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/peanuts2.png" alt="peanuts2">
             </div>
           
         </div>
+    </section>
+
+    <section id="products-card">
+      <div class="container">
+        <div class="row">
+        <div class="col s12 m6">
+            <h2 class="header">Horizontal Card</h2>
+            <div class="card horizontal">
+              <div class="card-image">
+                <img src="https://lorempixel.com/100/190/nature/6">
+              </div>
+              <div class="card-stacked">
+                <div class="card-content">
+                  <p>I am a very simple card. I am good at containing small bits of information.</p>
+                </div>
+                <div class="card-action">
+                  <a href="#">This is a link</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6">
+              <h2 class="header">Horizontal Card</h2>
+              <div class="card horizontal">
+                <div class="card-image">
+                  <img src="https://lorempixel.com/100/190/nature/6">
+                </div>
+                <div class="card-stacked">
+                  <div class="card-content">
+                    <p>I am a very simple card. I am good at containing small bits of information.</p>
+                  </div>
+                  <div class="card-action">
+                    <a href="#">This is a link</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col s12 m6">
+                <h2 class="header">Horizontal Card</h2>
+                <div class="card horizontal">
+                  <div class="card-image">
+                    <img src="https://lorempixel.com/100/190/nature/6">
+                  </div>
+                  <div class="card-stacked">
+                    <div class="card-content">
+                      <p>I am a very simple card. I am good at containing small bits of information.</p>
+                    </div>
+                    <div class="card-action">
+                      <a href="#">This is a link</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col s12 m6">
+                  <h2 class="header">Horizontal Card</h2>
+                  <div class="card horizontal">
+                    <div class="card-image">
+                      <img src="https://lorempixel.com/100/190/nature/6">
+                    </div>
+                    <div class="card-stacked">
+                      <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information.</p>
+                      </div>
+                      <div class="card-action">
+                        <a href="#">This is a link</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+</div>
+</div>
+
     </section>
 
 </body>
