se cambia img background

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,7 @@
 
   <div id="full-info-screen">
     <header>
+      <div class="navbar-fixed">
       <nav class="second-nav">
         <div class="nav-wrapper">
           <div class="container">
@@ -70,17 +71,16 @@
           </div>
         </div>
       </nav>
+      </div>
     </header>
 
 
 
-    <section class="animated fadeInUp">
+    <section id="who-we-are" class="animated fadeInUp">
       <div class="container">
         <div class="row">
 
-          <img id="peanuts"
-            src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/peanuts.png"
-            alt="peanut">
+          
 
           <h3 class="col l12">¿Por qué elegir Snack Natural?</h3>
           <br>
@@ -115,9 +115,7 @@
             <p class="col l12 paragraph">Producimos nuestros productos de principio a fin con dedicación para así
               conservar el sabor y valor nutricional de cada alimento.</p>
           </div>
-          <img id="peanuts2"
-            src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/peanuts2.png"
-            alt="peanuts2">
+          
         </div>
 
       </div>
@@ -218,7 +216,7 @@
           <div class="col s12 m4">
             <div class="card large">
               <div class="card-image">
-                <img src="images/sample-1.jpg">
+                <img src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/Loop.png">
                 <span class="card-title">Card Title</span>
               </div>
               <div class="card-content">
@@ -237,7 +235,7 @@
           <div class="col s12 m4">
             <div class="card large">
               <div class="card-image">
-                <img src="images/sample-1.jpg">
+                <img src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/50315507_2270706336518898_8504160729169431212_n.png">
                 <span class="card-title">Card Title</span>
               </div>
               <div class="card-content">
@@ -255,7 +253,7 @@
           <div class="col s12 m4">
             <div class="card large">
               <div class="card-image">
-                <img src="images/sample-1.jpg">
+                <img src="https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/30829491_620638051603959_830459341457850368_n.png">
                 <span class="card-title">Card Title</span>
               </div>
               <div class="card-content">
